Fix for readability
I somehow got a CSS property name on the wrong line.

--- a/src/ssp.css
+++ b/src/ssp.css
@@ -129,8 +129,8 @@ li {
 }
 #mainpanel {
   flex: 0 0 auto;
-  display: flex; background-color: 
-  rgb(136, 204, 255, 20%); 
+  display: flex; 
+  background-color: rgb(136, 204, 255, 20%); 
   overflow: auto; 
   width: auto;
   padding: 0;
